# blog_app

./: .gitignore  README.md  docker-compose.yaml
blog_app/: .env.example  Dockerfile  main.py  pyproject.toml  requirements.txt  run_blog_app.sh
blog_app/alembic/: env.py
blog_app/alembic/versions/: 2024_11_22_2005-29eca6758319_create_posts_table.py  2024_11_22_2156-3ec1eac48d9b_create_posts_table.py  2024_11_23_1630-397a04094684_create_likes_table.py  2024_11_24_1233-d9beb48563b3_create_posts_and_likes_table.py
blog_app/logs/: config.json
blog_app/src/: app.py
blog_app/src/core/: config.py
blog_app/src/dao/: base.py  dao.py
blog_app/src/db/: postgres.py
blog_app/src/models/: __init__.py  base.py  like.py  post.py
blog_app/src/routers/: like.py  post.py
blog_app/src/schemas/: post.py
blog_app/src/tests/functional/: .env.example  config.py  conftest.py  docker-compose.yaml  requirements.txt
blog_app/src/tests/functional/fixtures/: make_request_fixtures.py  postgres_fixtures.py
blog_app/src/tests/functional/src/: test_like.py  test_post.py
blog_app/src/utils/: like_crud.py  messages.py  post_crud.py
